# bright-lights

./: .gitignore  CMakeLists.txt
cmake/: ShaderString.cmake
src/: main.cpp
src/01_simple_light/: main.cpp
src/01_simple_light/shaders/glsl/: fragment_surface.frag  vertex_scene.vert
src/01_simple_light/shaders/headers/: fragment.h  vertex.h
src/02_gouraud_shading/: main.cpp
src/02_gouraud_shading/shaders/glsl/: gouraud.frag  gouraud.vert  phong.frag  phong.vert  vertex_scene.vert
src/core/: camera.cpp  camera.h  grid.cpp  grid.h  window.cpp  window.h
src/mesh/: sphere.h
src/shared/: grid.cpp  grid.h
src/shared/shaders/glsl/: grid_fragment.frag  grid_vertex.vert
src/shared/shaders/headers/: grid_fragment.h  grid_vertex.h
